[tool.poetry]
name = "audio-recording"
version = "0.1.0"
description = ""
authors = ["Violet Eldridge <github@violet-mica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "6.6.1"
sounddevice = "^0.5.1"
soundfile = "^0.12.1"
numpy = "^2.2.1"
pyaudio = "^0.2.14"
pygobject = "^3.50.0"
dasbus = "^1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
